--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Techdegree Project 2</title>
 </head>
 <body>
+    <header>
     <nav class="main-nav">
         <ul class="nav-bar">
             <li><h1>David K</h1></li>
@@ -20,76 +21,67 @@
             <li>Contact</li>
         </ul>
     </nav>
-   <header>
-        <img src="images/responsive-layout-profile.png" alt="profile picture">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
-            anim id est laborum.
+    <div class="profile">
+        <img src="images/responsive-layout-profile.png" alt="profile picture" class="profile-img">
+        <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished
+            a degree in front-end web development at Treehouse and am excited to put all my skills
+            to use!
         </p>
+    </div>
    </header>
        <main class="portfolio">
-           
            <article>
                <img src="images/portfolio-1.png" alt="marketing page"></img>
                <h3>Marketing Page</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+               <p>This project shows the front page of a marketing website meant for a specific 
+                   business I'm interested in.
+               </p>
            </article>
            <article>
                <img src="images/portfolio-2.png" alt="search page"></img>
                <h3>Search Page</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+               <p>This project searches through a specific databse to find information that the
+                   user is trying to look up.
+               </p>
            </article>
            <article>
                <img src="images/portfolio-3.png" alt="travel app"></img>
                <h3>Travel App</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+               <p>This project compares travel times based on different transportation methods and 
+                   tells you the best one.
+               </p>
            </article>
            <article>
                <img src="images/portfolio-4.png" alt="map of favourite spots"></img>
                <h3>Map of Favourite Spots</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+               <p>This project uses mapping apis to plot points for my favorite spots in the city for
+                   a do-it-yourself walking tour.
+               </p>
            </article>
            <article>
                <img src="images/portfolio-5.png" alt="photo gallery"></img>
                <h3>Photo Gallery</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+               <p>This project shows pictures from a recent trip to the viewer and allows them to 
+                   easily navigate through photos.
+               </p>
            </article>
            <article>
                <img src="images/portfolio-6.png" alt="calculator"></img>
                <h3>Calculator</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+               <p>Someone can enter in the numbers they want, and press the big blue button and 
+                   get the results.
+               </p>
            </article>
 
            <div class="contact">
                 <h2>Contact</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                <h5>Phone&nbsp&nbsp&nbsp1(416)555-1234</h5>
+                <p>If you're interested in chatting or want more information about what I've been
+                    working on, I'd love to hear from you!
+                </p>
+                <h5>Phone&nbsp&nbsp&nbsp+1(416)555-1234</h5>
                 <h5>Email&nbsp&nbsp&nbspdavidkhuupro@gmail.com</h5>
            </div>
+           <hr>
        </main>
 
 
