--- a/index.html
+++ b/index.html
@@ -29,50 +29,52 @@
         </p>
     </div>
    </header>
-       <main class="portfolio">
-           <article>
+       <main class="container">
+        <h3>Portfolio</h3>
+           <section>
+            <div class="item-1 item">
                <img src="images/portfolio-1.png" alt="marketing page"></img>
                <h3>Marketing Page</h3>
                <p>This project shows the front page of a marketing website meant for a specific 
                    business I'm interested in.
                </p>
-           </article>
-           <article>
+            </div>
+            <div class="item-2 item">
                <img src="images/portfolio-2.png" alt="search page"></img>
                <h3>Search Page</h3>
                <p>This project searches through a specific databse to find information that the
                    user is trying to look up.
                </p>
-           </article>
-           <article>
+            </div>
+            <div class="item-3 item">
                <img src="images/portfolio-3.png" alt="travel app"></img>
                <h3>Travel App</h3>
                <p>This project compares travel times based on different transportation methods and 
                    tells you the best one.
                </p>
-           </article>
-           <article>
+            </div>
+            <div class="item-4 item">
                <img src="images/portfolio-4.png" alt="map of favourite spots"></img>
                <h3>Map of Favourite Spots</h3>
                <p>This project uses mapping apis to plot points for my favorite spots in the city for
                    a do-it-yourself walking tour.
                </p>
-           </article>
-           <article>
+            </div>
+            <div class="item-5 item">
                <img src="images/portfolio-5.png" alt="photo gallery"></img>
                <h3>Photo Gallery</h3>
                <p>This project shows pictures from a recent trip to the viewer and allows them to 
                    easily navigate through photos.
                </p>
-           </article>
-           <article>
+            </div>
+            <div class="item-6 item">
                <img src="images/portfolio-6.png" alt="calculator"></img>
                <h3>Calculator</h3>
                <p>Someone can enter in the numbers they want, and press the big blue button and 
                    get the results.
                </p>
-           </article>
-
+            </div>
+        </section>
            <div class="contact">
                 <h2>Contact</h2>
                 <p>If you're interested in chatting or want more information about what I've been
