--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <header>
     <nav class="main-nav">
+        <h1 class="name">David K</h1>
         <ul class="nav-bar">
-            <li><h1>David K</h1></li>
             <li>Home</li>
             <li>Portfolio</li>
             <li>Skills</li>
@@ -22,57 +22,61 @@
         </ul>
     </nav>
     <div class="profile">
-        <img src="images/responsive-layout-profile.png" alt="profile picture" class="profile-img">
+        <div class="profile-img">
+        <img src="images/responsive-layout-profile.png" alt="profile picture">
+        </div>
+        <div class="profile-text">
         <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished
             a degree in front-end web development at Treehouse and am excited to put all my skills
             to use!
         </p>
+        </div>
     </div>
    </header>
-       <main class="container">
-        <h3>Portfolio</h3>
-           <section>
+       <main>
+        <h3>Portfolio</h3>        
+           <section class="container">            
             <div class="item-1 item">
-               <img src="images/portfolio-1.png" alt="marketing page"></img>
-               <h3>Marketing Page</h3>
-               <p>This project shows the front page of a marketing website meant for a specific 
-                   business I'm interested in.
-               </p>
+                <img class="pic" src="images/portfolio-1.png" alt="marketing page"></img>                
+                <h3>Marketing Page</h3>
+                <p>This project shows the front page of a marketing website meant for a specific 
+                business I'm interested in.
+                </p>
             </div>
             <div class="item-2 item">
-               <img src="images/portfolio-2.png" alt="search page"></img>
-               <h3>Search Page</h3>
-               <p>This project searches through a specific databse to find information that the
-                   user is trying to look up.
-               </p>
+                <img class="pic" src="images/portfolio-2.png" alt="search page"></img>               
+                <h3>Search Page</h3>
+                <p>This project searches through a specific databse to find information that the
+                user is trying to look up.
+                </p>
             </div>
             <div class="item-3 item">
-               <img src="images/portfolio-3.png" alt="travel app"></img>
-               <h3>Travel App</h3>
-               <p>This project compares travel times based on different transportation methods and 
-                   tells you the best one.
-               </p>
+                <img class="pic" src="images/portfolio-3.png" alt="travel app"></img>               
+                <h3>Travel App</h3>
+                <p>This project compares travel times based on different transportation methods and 
+                tells you the best one.
+                </p>
             </div>
             <div class="item-4 item">
-               <img src="images/portfolio-4.png" alt="map of favourite spots"></img>
-               <h3>Map of Favourite Spots</h3>
-               <p>This project uses mapping apis to plot points for my favorite spots in the city for
-                   a do-it-yourself walking tour.
-               </p>
+                <img class="pic" src="images/portfolio-4.png" alt="map of favourite spots"></img>               
+                <h3>Map of Favourite Spots</h3>
+                <p>This project uses mapping apis to plot points for my favorite spots in the city for
+                a do-it-yourself walking tour.
+                </p>
             </div>
             <div class="item-5 item">
-               <img src="images/portfolio-5.png" alt="photo gallery"></img>
-               <h3>Photo Gallery</h3>
-               <p>This project shows pictures from a recent trip to the viewer and allows them to 
-                   easily navigate through photos.
-               </p>
+                <img class="pic" src="images/portfolio-5.png" alt="photo gallery"></img>               
+                <h3>Photo Gallery</h3>
+                <p>This project shows pictures from a recent trip to the viewer and allows them to 
+                easily navigate through photos.
+                </p>
             </div>
             <div class="item-6 item">
-               <img src="images/portfolio-6.png" alt="calculator"></img>
-               <h3>Calculator</h3>
-               <p>Someone can enter in the numbers they want, and press the big blue button and 
-                   get the results.
-               </p>
+                <img class="pic" src="images/portfolio-6.png" alt="calculator"></img>               
+                <h3>Calculator</h3>
+                <p>Someone can enter in the numbers they want, and press the big blue button and 
+                get the results.
+                </p>
             </div>
         </section>
            <div class="contact">
@@ -89,7 +93,13 @@
 
    <footer>
     <h4>David K</h4>
-    <h4><a href="#">Back to Top</a></h4>
+    <h4><a class="top" href="#">Back to Top</a></h4>
+    <ul class="footer-bar">
+        <li>Home</li>
+        <li>Portfolio</li>
+        <li>Skills</li>
+        <li>Contact</li>
+    </ul>
    </footer> 
 </body>
 </html>
