--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <nav class="main-nav">
         <h1 class="name">David K</h1>
         <ul class="nav-bar">
-            <li>Home</li>
-            <li>Portfolio</li>
-            <li>Skills</li>
-            <li>Contact</li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#skil">Skills</a></li>
+            <li><a href="#cont">Contact</a></li>
         </ul>
     </nav>
     <div class="profile">
@@ -34,71 +34,84 @@
     </div>
    </header>
        <main>
-        <h3>Portfolio</h3>        
-           <section class="container">            
+        <h3 id="portfolio">PORTFOLIO</h3>        
+        <section class="container">            
             <div class="item-1 item">
-                <img class="pic" src="images/portfolio-1.png" alt="marketing page"></img>                
+                <img class="pic" src="images/portfolio-1.png" alt="marketing page">                
                 <h3>Marketing Page</h3>
                 <p>This project shows the front page of a marketing website meant for a specific 
                 business I'm interested in.
                 </p>
             </div>
             <div class="item-2 item">
-                <img class="pic" src="images/portfolio-2.png" alt="search page"></img>               
+                <img class="pic" src="images/portfolio-2.png" alt="search page">               
                 <h3>Search Page</h3>
                 <p>This project searches through a specific databse to find information that the
                 user is trying to look up.
                 </p>
             </div>
             <div class="item-3 item">
-                <img class="pic" src="images/portfolio-3.png" alt="travel app"></img>               
+                <img class="pic" src="images/portfolio-3.png" alt="travel app">               
                 <h3>Travel App</h3>
                 <p>This project compares travel times based on different transportation methods and 
                 tells you the best one.
                 </p>
             </div>
             <div class="item-4 item">
-                <img class="pic" src="images/portfolio-4.png" alt="map of favourite spots"></img>               
+                <img class="pic" src="images/portfolio-4.png" alt="map of favourite spots">               
                 <h3>Map of Favourite Spots</h3>
                 <p>This project uses mapping apis to plot points for my favorite spots in the city for
                 a do-it-yourself walking tour.
                 </p>
             </div>
             <div class="item-5 item">
-                <img class="pic" src="images/portfolio-5.png" alt="photo gallery"></img>               
+                <img class="pic" src="images/portfolio-5.png" alt="photo gallery">               
                 <h3>Photo Gallery</h3>
                 <p>This project shows pictures from a recent trip to the viewer and allows them to 
                 easily navigate through photos.
                 </p>
             </div>
             <div class="item-6 item">
-                <img class="pic" src="images/portfolio-6.png" alt="calculator"></img>               
+                <img class="pic" src="images/portfolio-6.png" alt="calculator">               
                 <h3>Calculator</h3>
                 <p>Someone can enter in the numbers they want, and press the big blue button and 
                 get the results.
                 </p>
             </div>
         </section>
-           <div class="contact">
-                <h2>Contact</h2>
+        
+        <!-- adding skills section -->
+        <div id="skil" class="skills">
+                <img class="pic-skills" src="images/portfolio-7.png" alt="skills">               
+                <h3>Skills</h3>
+                <p>I have good knowledge of languages like C, C++, SQL, Linux, Java, CSS, HTML and Javascript.
+                I have a proficient understanding of networking, database management, building websites, 
+                Android development, business analysis and writing.
+                </p>
+            </div>
+           
+        <div id="cont" class="contact">
+                <h3>CONTACT</h3>
                 <p>If you're interested in chatting or want more information about what I've been
                     working on, I'd love to hear from you!
-                </p>
-                <h5>Phone&nbsp&nbsp&nbsp+1(416)555-1234</h5>
-                <h5>Email&nbsp&nbsp&nbspdavidkhuupro@gmail.com</h5>
+                <br><br><br>                
+                <p>Phone&nbsp;
+                    <b>+1(416)555-1234</b></p>
+                <br>
+                <p>Email&nbsp;
+                    <b>davidkhuupro@gmail.com</b></p>
            </div>
            <hr>
        </main>
-
 
    <footer>
     <h4>David K</h4>
     <h4><a class="top" href="#">Back to Top</a></h4>
     <ul class="footer-bar">
-        <li>Home</li>
-        <li>Portfolio</li>
-        <li>Skills</li>
-        <li>Contact</li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#skil">Skills</a></li>
+        <li><a href="#cont">Contact</a></li>
     </ul>
    </footer> 
 </body>
