--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
             <li><a href="#cont">Contact</a></li>
         </ul>
     </nav>
-    <div class="profile">
-        <div class="profile-img">
+    <!-- Changed the naming convention of image and text -->
+    <div class="intro">
+        <div class="img-profile">
         <img src="images/responsive-layout-profile.png" alt="profile picture">
         </div>
-        <div class="profile-text">
+        <div class="text-profile">
         <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished
             a degree in front-end web development at Treehouse and am excited to put all my skills
             to use!
